# Auto_ML_Platform_01

./: .gitignore  CLAUDE.md  KEYS.txt  README.md  commands.txt  railway.toml  test_backend.py  test_jobs_standalone.py  verify_database.py  verify_jobs_system.py
apps/api/: .env  .env.example  .env.production.example  .env.render  README.md  alembic.ini  check_db.py  check_redis.py  cleanup_enums.sql  cleanup_old_migration.py  pyproject.toml  run_all_tests.py  test_field_alignment.py  test_services.py  verify_database_schema.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep  20251122_182514_a4ea1226660c_initial_schema.py  20251122_234019_298fe3553ae6_add_oauth_fields.py  20251126_dataset_versioning_clean.py  20260102_remove_credit_system.py  a1b2c3d4e5f6_add_missing_constraints_triggers.py
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/auth/: __init__.py  dependencies.py  jwt.py  oauth.py  redis.py  router.py  schemas.py  service.py
apps/api/app/core/: __init__.py  config.py  database.py  middleware.py  routes.py  security.py
apps/api/app/credits/: __init__.py  router.py  schemas.py  service.py
apps/api/app/datasets/: __init__.py  router.py  samples_router.py
apps/api/app/jobs/: __init__.py  cost_calculator.py  db_helpers.py  router.py  schemas.py  service.py
apps/api/app/learning/: __init__.py  content.py  content_best_practices.py  content_classification.py  content_clustering.py  content_feature_engineering.py  content_ml_basics.py  content_model_evaluation.py  content_neural_networks.py  content_regression.py  router.py  schemas.py  service.py
apps/api/app/ml/: __init__.py  constants.py  errors.py  logging_config.py  worker_utils.py
apps/api/app/models/: __init__.py  router.py  schemas.py  service.py
apps/api/app/plugins/: __init__.py  (+3 more)
apps/api/sample_data/: README.md
apps/api/tests/: conftest.py  test_credit_logic.py  test_credits.py  test_health.py  test_jobs.py
apps/workers/: .env.example  WORKER_README.md  pyproject.toml
apps/workers/tests/: conftest.py  test_evaluators.py  test_job_execution_task.py  test_trainers_advanced.py  test_trainers_basic.py  test_trainers_errors.py  test_trainers_special.py  test_xgboost_gpu.py
apps/workers/worker/: celery_app.py  constants.py  errors.py  logging_config.py  utils.py
(+305 files in other folders)
