[project]
name = "workers"
version = "0.1.0"
description = "Celery workers for ML pipeline"
authors = [
    {name = "Periya Samy"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "boto3 (>=1.40.73,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "polars (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
